extends Control

func _ready():
	pass # Replace with function body.





func _on_ArcanleaScene1_button_up():
	get_tree().change_scene("res://src/Scenes/Arcaniea_Scene_1.tscn")
	pass # Replace with function body.


func _on_ArcanleaScene2_button_up():
	get_tree().change_scene("res://src/Scenes/Arcaniea_Scene_1.tscn")
	pass # Replace with function body.


func _on_ArcanleaScene3_button_up():
	get_tree().change_scene("res://src/Scenes/Arcaniea_Scene_3.tscn")
	pass # Replace with function body.


func _on_VelouriaScene1_button_up():
	get_tree().change_scene("res://src/Scenes/Velouria_Scene_1.tscn")
	pass # Replace with function body.


func _on_VelouriaScene2_button_up():
	get_tree().change_scene("res://src/Scenes/Velouria_Scene_2.tscn")
	pass # Replace with function body.


func _on_VelouriaScene3_button_up():
	get_tree().change_scene("res://src/Scenes/Velouria_Scene_3.tscn")
	pass # Replace with function body.


func _on_FaeriethScene1_button_up():
	pass # Replace with function body.


func _on_FaeriethScene2_button_up():
	pass # Replace with function body.


func _on_FaeriethScene3_button_up():
	pass # Replace with function body.


func _on_IncriaScene1_button_up():
	pass # Replace with function body.


func _on_IncriaScene2_button_up():
	pass # Replace with function body.


func _on_IncriaScene3_button_up():
	pass # Replace with function body.


func _on_PetrosScene1_button_up():
	pass # Replace with function body.


func _on_PetrosScene2_button_up():
	pass # Replace with function body.


func _on_PetrosScene3_button_up():
	pass # Replace with function body.


func _on_KingsleyScene1_button_up():
	pass # Replace with function body.


func _on_KingsleyScene3_button_up():
	pass # Replace with function body.


func _on_KingsleyScene2_button_up():
	pass # Replace with function body.


func _on_OdrahnScene1_button_up():
	pass # Replace with function body.


func _on_OdrahnScene2_button_up():
	pass # Replace with function body.


func _on_OdrahnScene3_button_up():
	pass # Replace with function body.


func _on_exitButton_button_up():
	get_tree().quit()
	pass # Replace with function body.


func _on_mainMenuButton_button_up():
	get_tree().change_scene("res://src/Scenes/mainMenu.tscn")
	pass # Replace with function body.


func _on_oobButton_button_up():
	get_tree().change_scene("res://src/Scenes/outOfBattleMenu.tscn")
	pass # Replace with function body.
